Fixed spacing of sections

--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ i{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 250px;
 }
 
 
@@ -476,11 +477,12 @@ i{
 .projects{
     background-color: #000000;
     width: 100%;
-    height: 500px;
+    height: 600px;
     display: flex;
     color: #fff;
     flex-direction: column;
     align-items: center;
+    padding-top: 100px;
 }
 
 .currentProjects{
@@ -489,20 +491,23 @@ i{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-top: ;
+    margin-top: 50px;
 }
 
 .currProjOne{
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 350px;
     background: #b6b6b6;
-    margin-left: 200px;
+    margin-left: 400px;
+    border-radius: 5px;
 }
 
 .currProjTwo{
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 350px;
     background: #b6b6b6;
+    margin-right: 400px;
+    border-radius: 5px;
 }
 
 .projects h1{
@@ -516,6 +521,7 @@ i{
     width: 300px;
     height: 2px;
     margin-right: 30px;
+    top: -20%;
     background-color: rgb(34, 34, 34); 
 }
 
@@ -526,6 +532,7 @@ i{
     width: 300px;
     height: 2px;
     margin-left: 30px;
+    top: -20%;
     background-color: rgb(34, 34, 34); 
 }
 
